--- a/course-components/navbar.html
+++ b/course-components/navbar.html
@@ -5,49 +5,67 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Menu Vertical Responsivo</title>
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="mystyles.css" />
   </head>
   <body>
     <nav>
       <div class="mobile">
         <div class="header">
-          <div class="logo">Logo</div>
-          <div class="more"><button>More</button></div>
+          <div class="logo">Navbar</div>
+          <div class="more">
+            <button id="bMore">
+              <span class="material-icons"> menu </span>
+            </button>
+          </div>
         </div>
-        <div class="links">
-          <a href="#">Services</a>
-          <a href="#">About</a>
-          <a href="#">Contact</a>
-          <a href="#">Search</a>
-          <a href="#">Sign up</a>
-          <a href="#">Login</a>
+        <div id="links" class="links collapsed">
+          <a href="#">Servicios</a>
+          <a href="#">Acerca</a>
+          <a href="#">Contacto</a>
+          <a href="#">Búscar</a>
+          <a href="#">Registrarse</a>
+          <a href="#">iniciar sesión</a>
         </div>
       </div>
 
       <div class="desktop">
-        <div class="logo">Logo</div>
+        <div class="logo">Navbar</div>
 
         <div class="primary">
-          <a href="#">Services</a>
-          <a href="#">About</a>
-          <a href="#">Contact</a>
+          <a href="#">Servicios</a>
+          <a href="#">Acerca</a>
+          <a href="#">Contacto</a>
         </div>
 
         <div class="secondary full">
-          <a href="#">Search</a>
-          <a href="#">Sign up</a>
-          <a href="#">Login</a>
+          <a href="#">Búscar</a>
+          <a href="#">Registrarse</a>
+          <a href="#">iniciar sesión</a>
         </div>
 
         <div class="secondary mini">
-          <a href="#" class="more">More</a>
+          <a href="#" class="more">Más</a>
           <div class="submenu">
-            <a href="#">Search</a>
-            <a href="#">Sign up</a>
-            <a href="#">Login</a>
+            <a href="#">Búscar</a>
+            <a href="#">Registrarse</a>
+            <a href="#">iniciar sesión</a>
           </div>
         </div>
       </div>
     </nav>
+
+    <script>
+      const bMore = document.querySelector("#bMore");
+      const links = document.querySelector("#links");
+
+      bMore.addEventListener("click", (e) => {
+        links.classList.toggle("collapsed");
+      });
+    </script>
   </body>
 </html>
